--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/background"
-    tools:context=".QuizActivity">
+    tools:context=".Quiz">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
+    <fragment
+        android:id="@+id/fragment"
+        android:name="myusarisoy.quizapp.QuizFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        tools:layout="@layout/fragment_quiz" />
 
-</LinearLayout>
+</RelativeLayout>
