--- a/app/src/main/res/layout/opening.xml
+++ b/app/src/main/res/layout/opening.xml
@@ -7,19 +7,10 @@
     android:background="@color/background">
 
     <ImageView
-        android:layout_marginTop="150dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:layout_width="125sp"
+        android:layout_height="125sp"
         android:background="@drawable/quizapp"
         android:layout_gravity="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        android:textSize="30sp"/>
 
 </LinearLayout>
