--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008ae6</color>
-    <color name="colorPrimaryDark">#007acc</color>
+    <color name="colorPrimaryDark">#008ae6</color>
     <color name="colorAccent">#003b46</color>
-    <color name="button">#4da6ff</color>
-    <color name="background">#c4dfe6</color>
-    <color name="text">#595959</color>
+    <color name="text">#373737</color>
+    <color name="buttonBackground">#e5e5e5</color>
+    <color name="background">#4da6ff</color>
 </resources>
