--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="50sp"
+    android:padding="80sp"
     android:background="@color/background"
     tools:context=".Result">
 
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:text="1"/>
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
             android:gravity="center"
             android:text="3"/>
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn4"
             android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn5"
             android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
             android:gravity="center"
             android:text="5"/>
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn6"
             android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn7"
             android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
             android:gravity="center"
             android:text="7"/>
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn8"
             android:layout_width="wrap_content"
@@ -123,7 +123,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn9"
             android:layout_width="wrap_content"
@@ -132,7 +132,7 @@
             android:gravity="center"
             android:text="9"/>
 
-        <TextView
+        <Button
             android:layout_weight="1"
             android:id="@+id/btn10"
             android:layout_width="wrap_content"
