--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -18,20 +18,23 @@
         android:textColor="@color/text"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-smallcaps"
         android:gravity="left"/>
 
     <EditText
+        android:layout_marginHorizontal="70dp"
         android:layout_marginTop="10sp"
         android:id="@+id/etUname"
-        android:inputType="textCapWords"
+        android:inputType="textCapCharacters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text=""
+        android:text="@string/username"
         android:textColor="@color/text"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-smallcaps"
         android:textSize="25sp"
-        android:gravity="center"/>
+        android:gravity="left"/>
 
     <Button
         android:layout_marginTop="30sp"
@@ -44,6 +47,7 @@
         android:textSize="18sp"
         android:textColor="@color/text"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/background"/>
 
 </LinearLayout>
