--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -26,6 +26,7 @@
         android:textColor="@color/text"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-smallcaps"
         android:gravity="center"/>
 
         <TextView
@@ -38,6 +39,7 @@
             android:textColor="@color/text"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:fontFamily="sans-serif-smallcaps"
             android:gravity="center"/>
 
     </LinearLayout>
@@ -52,6 +54,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/background"/>
 
     <ImageView
@@ -76,6 +79,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/buttonBackground"/>
 
     <Button
@@ -88,6 +92,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/buttonBackground"/>
 
     <Button
@@ -100,6 +105,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/buttonBackground"/>
 
     <Button
@@ -112,6 +118,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
         android:background="@color/buttonBackground"/>
 
     </LinearLayout>
