--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -22,9 +22,9 @@
         android:gravity="left"/>
 
     <EditText
+        android:id="@+id/editTextUsername"
         android:layout_marginHorizontal="70dp"
         android:layout_marginTop="10sp"
-        android:id="@+id/etUname"
         android:inputType="textCapCharacters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,9 +37,9 @@
         android:gravity="left"/>
 
     <Button
+        android:id="@+id/next"
+        android:onClick="gotoNextActivity"
         android:layout_marginTop="30sp"
-        android:id="@+id/btnStart"
-        android:onClick="doOp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
