--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="80sp"
+    android:padding="50sp"
     android:background="@color/background"
     tools:context=".Result">
 
@@ -18,20 +18,22 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn1"
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="1"/>
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn2"
+            android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="2"/>
     </LinearLayout>
 
@@ -44,20 +46,22 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn3"
+            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="3"/>
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn4"
+            android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="4"/>
 
     </LinearLayout>
@@ -71,20 +75,22 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn5"
+            android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="5"/>
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn6"
+            android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="6"/>
 
     </LinearLayout>
@@ -98,20 +104,22 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn7"
+            android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="7"/>
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn8"
+            android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="8"/>
 
     </LinearLayout>
@@ -125,53 +133,51 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn9"
+            android:id="@+id/button9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="9"/>
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/btn10"
+            android:id="@+id/button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:gravity="center"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="10"/>
 
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:layout_marginTop="20sp"
+        android:id="@+id/textViewScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:layout_weight="0.9"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/txtScore"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@color/text"
-            android:background="@color/background"/>
+        android:hint="Score"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/text"
+        android:fontFamily="sans-serif-smallcaps"/>
 
         <Button
-            android:layout_marginTop="20sp"
-            android:id="@+id/btnScore"
+            android:layout_marginTop="15sp"
+            android:id="@+id/buttonDetailedScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:text="@string/seeScore"
             android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/text"
+            android:fontFamily="sans-serif-smallcaps"
             android:background="@color/background"/>
-
-    </LinearLayout>
 
 </LinearLayout>
