--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -9,6 +9,7 @@
     android:padding="20sp"
     tools:context=".QuizFragment">
 
+    // Arrangement for Score and Remaining Time
     <LinearLayout
         android:layout_marginTop="30sp"
         android:layout_width="match_parent"
@@ -44,6 +45,13 @@
 
     </LinearLayout>
 
+    // Arrangement for Question and ImageView
+    <LinearLayout
+        android:layout_marginTop="20sp"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="match_parent"
@@ -64,7 +72,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
+    </LinearLayout>
+
+    // Arrangement for Choices
     <LinearLayout
+        android:layout_weight="1.7"
         android:padding="50sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
