--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/tvUname"
+        android:text="@string/textViewUsername"
         android:textColor="@color/text"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="left"/>
@@ -29,22 +29,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/username"
+        android:hint="@string/username"
         android:textColor="@color/text"
         android:textStyle="bold"
         android:fontFamily="sans-serif-smallcaps"
-        android:textSize="25sp"
-        android:gravity="left"/>
+        android:textSize="30sp"
+        android:gravity="center"/>
 
     <Button
-        android:id="@+id/next"
-        android:onClick="gotoNextActivity"
+        android:onClick="buttonNext"
         android:layout_marginTop="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Next"
-        android:textSize="18sp"
+        android:text="@string/next"
+        android:textSize="20sp"
         android:textColor="@color/text"
         android:textStyle="bold"
         android:fontFamily="sans-serif-smallcaps"
