--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -10,7 +10,7 @@
     tools:context=".QuizFragment">
 
     <LinearLayout
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -24,34 +24,62 @@
         android:layout_gravity="center"
         android:hint="Score: "
         android:textColor="@color/text"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center"/>
 
         <TextView
-            android:layout_weight="1"
-            android:id="@+id/textViewTimer"
+            android:layout_weight="2"
+            android:id="@+id/textViewRate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:hint="Remaining Time: "
+            android:hint="Questions: "
             android:textColor="@color/text"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:fontFamily="sans-serif-smallcaps"
             android:gravity="center"/>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_weight="2.95"
+        android:layout_marginTop="10sp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewTimer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:hint="Remaining Time: "
+            android:textColor="@color/text"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10sp"
+        android:layout_weight="1.8"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="20sp"
         android:hint="Question"
         android:textColor="@color/text"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         android:gravity="center"
         android:fontFamily="sans-serif-smallcaps"
@@ -64,8 +92,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
+    </LinearLayout>
+
     <LinearLayout
-        android:padding="50sp"
+        android:padding="20sp"
+        android:layout_weight="1.7"
+        android:layout_marginHorizontal="20sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
